Complete WebSocket and backend infrastructure improvements
## Backend Core Changes:
- **AuthenticationInterceptor**: Complete JWT validation with real user lookup
- **ChatWebSocketHandler**: Enhanced message processing with proper user validation
- **MessageController**: REST API endpoints for message history retrieval
- **MessageService**: Improved message loading and persistence methods
- **HealthController**: Added health check endpoints for monitoring

## Security & Configuration:
- **SecurityConfig**: Enhanced CORS with specific origins and proper headers
- **WebSocketConfig**: Removed SockJS for plain WebSocket compatibility
- **AuthController**: Improved error handling and validation
- **ChatMessage**: Added senderUsername field for proper display

## Database & Repository:
- **ChatMessageRepository**: Added timestamp-based query methods
- **MessageService**: Fixed getPendingMessages and added user-specific queries
- **Application.yml**: Updated CORS configuration for multiple ports

## Key Technical Improvements:
- Real JWT token validation in WebSocket handshake
- Proper user ID extraction from database instead of mock values
- Enhanced error handling with detailed logging
- Message persistence across browser refresh
- Multi-port CORS support for development
- Health monitoring endpoints

All WebSocket connection and message persistence issues resolved.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>